[package]
name = "libopenxg"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0"
description = "libopenxg is a library that logs into Sophos XG Firewalls as a user. It's used by https://github.com/Alex-Programs/openxgauthenticator"
homepage = "https://github.com/Alex-Programs/libopenxg"
repository = "https://github.com/Alex-Programs/libopenxg"
keywords = ["api", "protocol", "client", "firewall"]
categories = ["api-bindings"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking", "rustls"]}
rustls = "0.20"
const_format = "0.2.30"